--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,11 @@
   "private": true,
   "dependencies": {
     "modernizr": "2.8.2",
-    "bootstrap-sass": "3.3.5"
+    "bootstrap-sass": "3.3.5",
+    "headroom.js": "~0.7.0",
+    "Flowtype.js": "flowtype#~1.1.0",
+    "stickyNavbar.js": "~1.3.1",
+    "sticky-kit": "~1.1.2"
   },
   "overrides": {
     "modernizr": {
@@ -34,6 +38,18 @@
         "./assets/fonts/bootstrap/glyphicons-halflings-regular.ttf",
         "./assets/fonts/bootstrap/glyphicons-halflings-regular.woff",
         "./assets/fonts/bootstrap/glyphicons-halflings-regular.woff2"
+      ]
+    },
+    "headroom.js": {
+      "main": [
+        "./dist/headroom.min.js",
+        "./dist/jQuery.headroom.min.js"
+      ]
+    },
+    "stickyNavbar.js": {
+      "main": [
+        "./jquery.stickyNavbar.min.js",
+        "./jquery.stickyNavbar.css"
       ]
     }
   }
