--- a/bower.json
+++ b/bower.json
@@ -10,9 +10,7 @@
     "modernizr": "2.8.2",
     "bootstrap-sass": "3.3.5",
     "headroom.js": "~0.7.0",
-    "Flowtype.js": "flowtype#~1.1.0",
-    "stickyNavbar.js": "~1.3.1",
-    "sticky-kit": "~1.1.2"
+    "Flowtype.js": "flowtype#~1.1.0"
   },
   "overrides": {
     "modernizr": {
@@ -44,12 +42,6 @@
       "main": [
         "./dist/headroom.min.js",
         "./dist/jQuery.headroom.min.js"
-      ]
-    },
-    "stickyNavbar.js": {
-      "main": [
-        "./jquery.stickyNavbar.min.js",
-        "./jquery.stickyNavbar.css"
       ]
     }
   }
