--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "bootstrap-sass": "3.3.5",
     "headroom.js": "~0.7.0",
     "Flowtype.js": "flowtype#~1.1.0",
-    "slick-carousel": "~1.5.8"
+    "slick-carousel": "~1.5.8",
+    "sticky-kit": "~1.1.2"
   },
   "overrides": {
     "modernizr": {
